	Init() before starting and some minor cleanups to atom type
	assignment, exposed by comparing PDB->Mol2 files from Babel and
	Sybyl. Thanks to Kevin Parkes for the example file.

	* src/formats/mol2format.cpp (WriteMolecule): Add back atom names
	from residues, add a residue number to each residue name (e.g.,
	THR1 vs. THR). Should better match mol2 files from Sybyl.

2006-02-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/pdbformat.cpp: Fix PR#1368851 for PDB export with
	large coordinates. Optionally shifts coordinates if needed.

	* src/mol.h: Fix PR#1373650 -- return NULL if no coordinate array
	is available. Prevents segfault.

	* src/atom.cpp (GetResidue): Make sure to return NULL if chains
	perception fails.

	* src/chains.cpp: If only one residue is found, and it's UNK, it's
	probably not a residue, so nuke it. 

	* src/formats/mol2format.cpp: Combined with two above fixes,
	ensure atom labels are printed correctly for mol2 files. All three
	fix PR#1371789.

	* src/obconversion.cpp: Update documentation to point out
	workaround for PR#1368969 with static members of OBConversion --
	declare dummy variable to make sure LoadFormatFiles() has been called.

2006-02-18  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/perl/OpenBabel.pm: Add dynaloader flags to ensure format
	modules are loaded properly on Linux.

	* src/mol.h, src/obiter.cpp, src/math/vector3.cpp,
	src/math/matrix3x3.cpp: Fix documentation errors.

	* src/formats/mdlformat.cpp: Fix possible memory leak with comment
	data and ensure comment is stored properly.

2006-02-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* tools/obdoc.cpp: Update to prepare wiki-fied documentation for
	the new format database/wiki on openbabel.sourceforge.net/wiki/

	* configure.in, configure, */Makefile.in: Update version number to
	2.0.1b1.

2006-01-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/main.cpp (main): Fix segfault bug reported by Mikael Johansson.
